paystack payment init

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-paystack_secret_key = 'your_paystack_secret_key'
+PAYSTACK_SECRET_KEY = 'sk_test_c737dc6676421f64bdf88abfddc8842202192149'
+PAYSTACK_PUBLIC_KEY = 'pk_test_56b2f9497f7e5d22aca5fe24fb9de73b8127e519'
