--- a/requirements.txt
+++ b/requirements.txt
@@ -18,8 +18,10 @@ cryptography==43.0.1
 dataclasses==0.6
 Django==5.1.1
 django-cors-headers==4.5.0
+django-environ==0.12.0
 django-filter==24.2
 django-telegram-login==0.2.3
+django_paystack==1.0.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 djongo==1.2.31
@@ -28,6 +30,7 @@ exceptiongroup==1.2.2
 Flask==3.0.3
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
+forex-python==1.8
 greenlet==3.1.0
 gunicorn==23.0.0
 h11==0.14.0
@@ -36,6 +39,7 @@ httpx==0.27.2
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
+jsonpickle==4.0.2
 kombu==5.4.2
 Mako==1.3.5
 MarkupSafe==2.1.5
@@ -46,12 +50,15 @@ pycparser==2.22
 PyJWT==2.10.1
 pymongo==4.10.1
 pyOpenSSL==24.2.1
+pypaystack2==2.0.3
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-dotenv==1.0.1
 python-telegram-bot==21.6
+python_paystack==1.2.0
 redis==5.2.0
 requests==2.32.3
+simplejson==3.20.1
 six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.35
@@ -61,7 +68,7 @@ typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 uvicorn==0.31.1
+validators==0.34.0
 vine==5.1.0
 wcwidth==0.2.13
 Werkzeug==3.0.4
-python-paystack==1.0.0
