--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,7 @@ kombu==5.4.2
 Mako==1.3.5
 MarkupSafe==2.1.5
 packaging==24.1
+paystackapi==2.1.3
 prompt_toolkit==3.0.48
 psycopg2==2.9.10
 pycparser==2.22
